# ComfyAI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.generated.md  README.md  README_CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  __init__.py  index.html  package-lock.json  poster.html  pyproject.toml  requirements.txt  run_tests.py  test_download_api.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  release.yml
assets/: FAQ.md  FAQ_CN.md
backend/: DEBUG_SYSTEM_README.md  IMAGE_SUPPORT.md  __init__.py  agent_factory.py  api.py  core.py  provider_manager.py  reference.md  router.py  setup_debug_system.py  workflow_rewrite.py
backend/controller/: conversation_api.py  llm_api.py
backend/dao/: expert_table.py
backend/data/: workflow_debug.db  workflow_rewrite_expert.json
backend/llm/: base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  registry.py
backend/routes/: __init__.py  chat.py  providers.py  settings.py
backend/service/: .env.llm  config.json.template  database.py  debug_agent.py  link_agent_tools.py  mcp-client.py  mcp_client.py  (+6 more)
config/: __init__.py  defaults.json  loader.py  provider_config.py  providers.local.json.example  providers_loader.py  schema.py
docs/: architecture.md  embedding_api.md  index.md  roadmap.md  settings.md
entry/: comfyui-bridge.js
frontend/: chat.html  comfyai.css  comfyai.js  main.js  settings.js
scripts/: test_prompt_resolution.py  test_workflow_rewrite.py
ui/: package-lock.json  package.json  tailwind.config.js
(+66 files in other folders)
