[project]
name = "ComfyAI"
version = "0.3.0"
description = "AI assistant and chat interface inside ComfyUI."
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  { name = "Bill (OGbilboswagins)" }
]

keywords = ["ComfyUI", "AI", "chat", "assistant", "LLM", "plugin", "workflow", "Ollama", "OpenAI", "Gemini"]

requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/OGbilboswagins/ComfyAI"
Issues = "https://github.com/OGbilboswagins/ComfyAI/issues"
Source = "https://github.com/OGbilboswagins/ComfyAI"

[tool.comfy]
PublisherId = "OGbilboswagins"
DisplayName = "ComfyUI-ComfyAI"
